Resolve margin issues causing horizontal scrollbar on fun

--- a/cmgm/fun/styles/main.css
+++ b/cmgm/fun/styles/main.css
@@ -3,8 +3,10 @@ body {
     padding: 0;
     font-size: 0.88em;
     max-width: calc(100vw - 25px);
-    margin-left: 12px;
 }
+#content_body {
+    margin-left: 12px;
+} 
 
 .statistics-wrapper {
     display: grid;
